--- a/webapp/WEB-INF/web.xml
+++ b/webapp/WEB-INF/web.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" version="4.0">
   <display-name>Library</display-name>
+  <!-- Omega Primefaces theme -->
+  <context-param>
+    <param-name>primefaces.THEME</param-name>
+    <param-value>omega</param-value>
+  </context-param>
+  <!-- Enabe client side validation (default off) -->
+  <context-param>
+  	<param-name>primefaces.CLIENT_SIDE_VALIDATION</param-name>
+  	<param-value>true</param-value>
+  </context-param>
   <servlet>
     <servlet-name>Faces Servlet</servlet-name>
     <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
@@ -14,4 +24,7 @@
     <servlet-name>Faces Servlet</servlet-name>
     <url-pattern>*.xhtml</url-pattern>
   </servlet-mapping>
+  <welcome-file-list>
+  	<welcome-file>index.xhtml</welcome-file>
+  </welcome-file-list>
 </web-app>
